--- a/app/styles/trigger-styles.css
+++ b/app/styles/trigger-styles.css
@@ -12,19 +12,18 @@
 	box-sizing:border-box !important;
 	border-radius: 50% !important;
 	z-index: 2147483647 !important;
-	box-shadow: 0 2px 7px 0 rgba(0, 0, 0, 0.19), 0 3px 6px 0 rgba(0, 0, 0, 0.2);
 	cursor: pointer !important;
 	background: white !important;
 	display: block !important;
+	box-shadow: 0 3px 15px rgba(0, 0, 0, 0.1);
 	transition:all .2s ease-in-out;
 }
 .__MSG_@@extension_id__-image-hidden {
 	border-radius: 50% !important;
+	overflow: hidden;
 	width: 100% !important;
 	height: 100% !important;
-	overflow: hidden !important;
 	display: block !important;
-	-webkit-mask-image: url(data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAEAAAABCAIAAACQd1PeAAAAGXRFWHRTb2Z0d2FyZQBBZG9iZSBJbWFnZVJlYWR5ccllPAAAAA5JREFUeNpiYGBgAAgwAAAEAAGbA+oJAAAAAElFTkSuQmCC) !important;
 }
 .__MSG_@@extension_id__-clickable-yo-trigger img {
 	display: block !important;
@@ -39,7 +38,7 @@
 	transform: scale(1);
 }
 .__MSG_@@extension_id__-clickable-yo-trigger:hover img {
-	top: -16px !important;
+	top: -17px !important;
 	transition:all .3s ease-in-out !important;
 }
 .__MSG_@@extension_id__-clickable-yo-trigger:after {
@@ -53,21 +52,57 @@
 
 .__MSG_@@extension_id__-clickable-yo-trigger-youtube .__MSG_@@extension_id__-image-hidden {
 	background-color: #F44336 !important;
+	background: -moz-radial-gradient(center, ellipse cover,  #F44336 0, #F44336 22px, #F44336 23px); /* FF3.6+ */
+	background: -webkit-gradient(radial, center center, 0, center center, 100%, color-stop(0,#F44336), color(21px,#F44336), co2or-stop(23px,#F44336)); /* Chrome,Safari4+ */
+	background: -webkit-radial-gradient(center, ellipse cover,  #F44336 0,#F44336 21px,#F44336 23px); /* Chrome10+,Safari5.1+ */
+	background: -o-radial-gradient(center, ellipse cover,  #F44336 0,#F44336 21px,#F44336 23px); /* Opera 12+ */
+	background: -ms-radial-gradient(center, ellipse cover,  #F44336 0,#F44336 21px,#F44336 23px); /* IE10+ */
+	background: radial-gradient(ellipse at center,  #F44336 0,#F44336 21px,#F44336 23px); /* W3C */
 }
 .__MSG_@@extension_id__-clickable-yo-trigger-soundcloud .__MSG_@@extension_id__-image-hidden {
 	background-color: #fc561e !important;
+	background: -moz-radial-gradient(center, ellipse cover,  #fc561e 0, #fc561e 22px, #fc561e 23px); /* FF3.6+ */
+	background: -webkit-gradient(radial, center center, 0, center center, 100%, color-stop(0,#fc561e), color(21px,#fc561e), co2or-stop(23px,#fc561e)); /* Chrome,Safari4+ */
+	background: -webkit-radial-gradient(center, ellipse cover,  #fc561e 0,#fc561e 21px,#fc561e 23px); /* Chrome10+,Safari5.1+ */
+	background: -o-radial-gradient(center, ellipse cover,  #fc561e 0,#fc561e 21px,#fc561e 23px); /* Opera 12+ */
+	background: -ms-radial-gradient(center, ellipse cover,  #fc561e 0,#fc561e 21px,#fc561e 23px); /* IE10+ */
+	background: radial-gradient(ellipse at center,  #fc561e 0,#fc561e 21px,#fc561e 23px); /* W3C */
 }
 .__MSG_@@extension_id__-clickable-yo-trigger-twitter .__MSG_@@extension_id__-image-hidden {
 	background-color: #55ACEE !important;
+	background: -moz-radial-gradient(center, ellipse cover,  #55ACEE 0, #55ACEE 22px, #55ACEE 23px); /* FF3.6+ */
+	background: -webkit-gradient(radial, center center, 0, center center, 100%, color-stop(0,#55ACEE), color(21px,#55ACEE), co2or-stop(23px,#55ACEE)); /* Chrome,Safari4+ */
+	background: -webkit-radial-gradient(center, ellipse cover,  #55ACEE 0,#55ACEE 21px,#55ACEE 23px); /* Chrome10+,Safari5.1+ */
+	background: -o-radial-gradient(center, ellipse cover,  #55ACEE 0,#55ACEE 21px,#55ACEE 23px); /* Opera 12+ */
+	background: -ms-radial-gradient(center, ellipse cover,  #55ACEE 0,#55ACEE 21px,#55ACEE 23px); /* IE10+ */
+	background: radial-gradient(ellipse at center,  #55ACEE 0,#55ACEE 21px,#55ACEE 23px); /* W3C */
 }
 .__MSG_@@extension_id__-clickable-yo-trigger-reddit .__MSG_@@extension_id__-image-hidden {
 	background-color: #ff5700 !important;
+	background: -moz-radial-gradient(center, ellipse cover,  #ff5700 0, #ff5700 22px, #ff5700 23px); /* FF3.6+ */
+	background: -webkit-gradient(radial, center center, 0, center center, 100%, color-stop(0,#ff5700), color(21px,#ff5700), co2or-stop(23px,#ff5700)); /* Chrome,Safari4+ */
+	background: -webkit-radial-gradient(center, ellipse cover,  #ff5700 0,#ff5700 21px,#ff5700 23px); /* Chrome10+,Safari5.1+ */
+	background: -o-radial-gradient(center, ellipse cover,  #ff5700 0,#ff5700 21px,#ff5700 23px); /* Opera 12+ */
+	background: -ms-radial-gradient(center, ellipse cover,  #ff5700 0,#ff5700 21px,#ff5700 23px); /* IE10+ */
+	background: radial-gradient(ellipse at center,  #ff5700 0,#ff5700 21px,#ff5700 23px); /* W3C */
 }
 .__MSG_@@extension_id__-clickable-yo-trigger-instagram .__MSG_@@extension_id__-image-hidden {
 	background-color: #517fa4 !important;
+	background: -moz-radial-gradient(center, ellipse cover,  #517fa4 0, #517fa4 22px, #517fa4 23px); /* FF3.6+ */
+	background: -webkit-gradient(radial, center center, 0, center center, 100%, color-stop(0,#517fa4), color(21px,#517fa4), co2or-stop(23px,#517fa4)); /* Chrome,Safari4+ */
+	background: -webkit-radial-gradient(center, ellipse cover,  #517fa4 0,#517fa4 21px,#517fa4 23px); /* Chrome10+,Safari5.1+ */
+	background: -o-radial-gradient(center, ellipse cover,  #517fa4 0,#517fa4 21px,#517fa4 23px); /* Opera 12+ */
+	background: -ms-radial-gradient(center, ellipse cover,  #517fa4 0,#517fa4 21px,#517fa4 23px); /* IE10+ */
+	background: radial-gradient(ellipse at center,  #517fa4 0,#517fa4 21px,#517fa4 23px); /* W3C */
 }
 .__MSG_@@extension_id__-clickable-yo-trigger-imgur .__MSG_@@extension_id__-image-hidden {
-	background-color: #85BF25 !important;
+	background: #85BF25 !important;
+	background: -moz-radial-gradient(center, ellipse cover,  #85BF25 0, #85BF25 22px, #85BF25 23px); /* FF3.6+ */
+	background: -webkit-gradient(radial, center center, 0, center center, 100%, color-stop(0,#85BF25), color(21px,#85BF25), co2or-stop(23px,#85BF25)); /* Chrome,Safari4+ */
+	background: -webkit-radial-gradient(center, ellipse cover,  #85BF25 0,#85BF25 21px,#85BF25 23px); /* Chrome10+,Safari5.1+ */
+	background: -o-radial-gradient(center, ellipse cover,  #85BF25 0,#85BF25 21px,#85BF25 23px); /* Opera 12+ */
+	background: -ms-radial-gradient(center, ellipse cover,  #85BF25 0,#85BF25 21px,#85BF25 23px); /* IE10+ */
+	background: radial-gradient(ellipse at center,  #85BF25 0,#85BF25 21px,#85BF25 23px); /* W3C */
 }
 .__MSG_@@extension_id__-clickable-yo-trigger-reddit .yocardsyopoppyblack,
 .__MSG_@@extension_id__-clickable-yo-trigger-reddit .yocardsyopoppywhite,
